[package]
name = "live-reload"
version = "0.2.0"
authors = ["Caleb Jones <code@calebjones.net>"]
description = "A library to help with live-reloading game development"
license = "Zlib"
documentation = "https://docs.rs/live-reloading"
repository = "https://github.com/porglezomp-misc/live-reloading-rs"

[dependencies]
libloading = { version="0.4", optional=true }
notify = { version="4.0", optional=true }

[features]
default = ["std"]
std = ["libloading", "notify"]

[workspace]
members = [
    "demo",
    "no-std-demo",
    "no-std-demo",
    "no-std-demo/no-std-reloadable",
]